frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-prod-deployment

spec:
  template: 
    metadata:
      name: frontend-prod-pod
      labels:
        app: myfrontend
        component: frontend
        type: frontend
    spec: 
      containers:
        - name: frontend-prod-container
          image: maciejtokarz/project:Dev-f-0-3
          ports:
          - containerPort: 80  
  replicas: 1
  selector:
    matchLabels:
      type: frontend
