redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-prod-deployment
  labels:
    app: redis
    type: db

spec:
  template:
    metadata:
      name: redis-prod-pod
      labels:
        app: redis
        component: redis
        type: db
    spec: 
      containers:
        - name: redis-prod-container
          image: redis:alpine
          ports:
          - containerPort: 6379
          
  replicas: 1
  selector:
    matchLabels: 
      app: redis
      type: db
