backend-clusterip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: backend-clusterip

spec: 
  type: ClusterIP
  ports: 
    - port: 5000

  selector: 
    component: backend
