frontend-clusterip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: frontend-prod-clusterip

spec: 
  type: ClusterIP
  ports: 
    - port: 80
      targetPort: 80

  selector: 
    component: frontend
