mongodb-clusterip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongobd-clusterip

spec: 
  type: ClusterIP
  ports: 
    - port: 27017

  selector: 
    component: mongodb
