redis-clusterip.yaml
apiVersion: v1
kind: Service
metadata: 
  name: redis-clusterip

spec: 
  type: ClusterIP
  ports: 
    - port: 6379

  selector: 
    component: redis
