ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: backend-prod.127-0-0-1.sslip.io
    http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-prod-clusterip
            port:
              number: 5000
  - host: frontend-prod.127-0-0-1.sslip.io
    http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: frontend-prod-clusterip
              port:
                number: 80
